Fix Sonar warnings