@@ -8,7 +8,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Company service implementation.
@@ -38,6 +37,6 @@ public class CompanyServiceImpl implements CompanyService {
 
         return companyDao.getCompanies().stream()
                 .filter(c -> LocalizationUtils.getString(c.getName(), language).toLowerCase().indexOf(lowerCaseFirstLetters) == 0)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
